remove an obsolete MAVEN_OPTS